--- a/content/html/affirmations.html
+++ b/content/html/affirmations.html
@@ -214,7 +214,7 @@ trait_label(svg, x1-d, y3, "end", "Humility",
 trait_label(svg, x2+d, y3, "start", "Confidence",
   "I will be passionate and committed<br>to my plans and decisions");
 trait_label(svg, width/2, 675, "middle", "Body and Mind",
-  "Supporting all the above,<br>I will foster focus, flexibility,<br>balance, and stamina<br>in my body and mind<br>as a prerequisite<br>to realizing my potential");
+	"The above is not sustainable<br>without a healthy body<br>and unencumbered mind");
 
 svg.selectAll(".traits")
    .on("mouseout", function() {
